--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" class="img-responsive">
+    <img src="" alt="" class="img-responsive">
   </div>
 </div>
 <div class="row">
@@ -11,7 +11,11 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
+      <button
+        type="button"
+        class="btn btn-primary dropdown-toggle">
+        Manage Recipe <span class="caret"></span>
+      </button>
       <ul class="dropdown-menu">
         <li><a href="#">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
@@ -30,33 +34,3 @@
     Ingredients
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
