--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,8 +4,16 @@
       <div class="row">
         <div class="col-xs-12">
 
-          <button type="submit" class="btn btn-success">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button
+            type="submit"
+            class="btn btn-success"
+            [disabled]="!recipeForm.valid"
+          >Save</button>
+          <button
+            type="button"
+            class="btn btn-danger"
+            (click)="onCancel()"
+          >Cancel</button>
         </div>
       </div>
       <div class="row">
@@ -30,6 +38,7 @@
               id="imagePath"
               class="form-control"
               formControlName="imagePath"
+              #imagePath
             >
           </div>
         </div>
@@ -37,7 +46,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <img src="" class="img-responsive">
+            <img [src]="imagePath.value" class="img-responsive">
           </div>
         </div>
       </div>
@@ -56,22 +65,46 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div
+            class="row"
+            *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i=index"
+            [formGroupName]="i"
+            style="margin-top: 10px"
+          >
             <div class="col-xs-8">
               <input
                 type="text"
                 class="form-control"
+                formControlName="name"
               >
             </div>
             <div class="col-xs-2">
               <input
                 type="number"
                 class="form-control"
+                formControlName="amount"
+
               >
             </div>
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button
+                type="button"
+                class="btn btn-danger"
+                (click)="onDeleteIngredient(i)"
+
+              >X</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button
+                class="btn btn-success"
+                (click)="onAddIngredient()"
+                type="button"
+              >Add Ingredient</button>
+
             </div>
           </div>
         </div>
